# luxmed-appointments-hunter

./: .env.template  .gitignore  Dockerfile  README.md  config.yaml  config_template.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-image.yml
LuxmedHunter/: Luxmed_hunter.py  luxmed_api.py  luxmed_client.py  luxmed_explorer.py  luxmed_functions.py  luxmed_hunter.py  luxmed_runner.py
LuxmedHunter/client/: luxmed_api.py  luxmed_functions.py
LuxmedHunter/luxmed/: luxmed_api.py  luxmed_client.py  luxmed_functions.py
LuxmedHunter/utils/: dir_paths.py  log_config.py  logger_custom.py  pushover_client.py  utility.py
_tests/: test1.py
luxmedhunter/: luxmed_runner.py
luxmedhunter/luxmed/: luxmed_api.py  luxmed_client.py  luxmed_functions.py
luxmedhunter/utils/: dir_paths.py  logger_custom.py  pushover_client.py  utility.py
