[tool.poetry]
name = "luxmedhunter"
version = "0.1.0"
description = ""
authors = ["Kalindro <25466220+Kalindro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
schedule = "^1.2.0"
pandas = "^2.0.2"
loguru = "^0.7.0"
requests = "^2.31.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
